web socket test and client refactored to simplify usage